@@ -47,5 +47,4 @@ YAML = 0
 File::pushd = 0
 FindBin = 0
 Scalar::Util = 0
-Term::ExtendedColor = 0
 Time::HiRes = 0
